--- a/package.json
+++ b/package.json
@@ -15,17 +15,28 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
     "bootstrap": "^4.6.2",
+    "encrypt-storage": "^2.12.14",
     "formik": "^2.2.9",
     "jquery": "^3.6.1",
+    "moment-timezone": "^0.5.39",
+    "otp-timer": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-input-emoji": "^4.3.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.13",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
