--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.39",
     "otp-timer": "^1.1.5",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
